--- a/src/assets/styles/boardlist.module.css
+++ b/src/assets/styles/boardlist.module.css
@@ -1,61 +1,115 @@
-/* 전체 컨테이너 설정 ##################################### */
-.topContainer{
+/* 상단 컨테이너 설정 ##################################### */
+.topContainer {
     width: 100%;
     height: 200px;
-    border-radius: 1.5rem;
+    border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+
     border: 2px solid #494949;
     margin-bottom: 20px;
     /* background-color: rgb(212, 235, 255); */
 }
-.topContainer>article{
+.topContainer>article {
     width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.listcount{
-    font-size: 1.7rem;
-    margin-bottom: 5px;
+.listcount {
+    font-size: 1.9rem;
+    font-weight: bold;
+    margin: 20px 0 15px 0;
     float: right;
 }
 
-/* 필터설정 ################################################ */
-.filter{
 
+/* 필터설정 ################################################ */
+.filter {
+    border-bottom: 1px solid #cfcfcf;
 }
 
 
 /* 검색설정 ################################################# */
-.search{
+.search {
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+}
+.search label {
+    width: 8%;
+    font-size: 2.3rem;
+    font-weight: bold;
+}
+.search select {
+    background-color: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.8rem;
+    width: 8%;
+    margin-right: 20px;
+}
+.search select option {
 
 }
+.search select:focus {
+    border: none;
+    outline: none;
+}
+.search input[type="search"] {
+    border: none;
+    font-size: 2.1rem;
+    flex-grow: 1; /* 가로 공간을 최대한 차지 */
+}
+.search input[type="search"]::placeholder {
+    color: #999;
+    font-size: 2.1rem;
+}
+.search input[type="search"]:focus{
+    border: none;
+    outline: none;
+}
+.search button {
+    padding: 13px 50px;
+    border: none;
+    border-radius: 4px;
+    background-color: #261e70;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+.search button:hover {
+    background-color: #366ba3;
+}
+
 
 
 /* 게시판 table 설정 ######################################### */
 .table {
     width: 100%;
     border-collapse: collapse;
+    border-radius: 0.5rem;
+    overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .table th, .table td {
-    padding: 12px 15px;
-    text-align: left;
+    padding: 15px 15px;
+    text-align: center;
     font-size: 16px;
 }
+.leftAlign {
+    text-align: left !important;
+}
 .table th {
-    background-color: #5e4caf;
+    background-color: #17122e;
     color: white;
 }
 .table td {
     border-bottom: 1px solid #ddd;
 }
-
 .table tr:hover {
     background-color: #ddd;
     cursor: pointer;
@@ -63,17 +117,26 @@
 
 
 
-/* 테이블 페이지네이션 버튼 ############################################ */
-.btn{
-    margin-top: 50px;
+/* 버튼 설정 ##################################################### */
+/* 게시글 버튼 */
+.cdBtn {
+    width: 100%;
+    text-align: right;
+    margin: 20px 0;
+}
+
+/* 페이지 버튼 */
+.page {
+    margin-top: 20px;
+    padding-bottom: 50px;
     width: 100%;
     text-align: center;
-  }
-  .numberBtn{
+}
+.numberBtn {
     background: none;
     border: none;
-  }
-  .btn button{
+}
+.page button {
     cursor: pointer;
     margin: 0 5px;
-  }
+}
