--- a/src/assets/styles/header.module.css
+++ b/src/assets/styles/header.module.css
@@ -8,11 +8,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 100px;
+    padding: 0 50px;
+    z-index: 999;
 }
 .logo{
     font-size: 2.2rem;
     color: #FFFFFF;
+    cursor: pointer;
 }
 .sign{
     font-size: 2.2rem;
