--- a/src/assets/styles/boardlist.module.css
+++ b/src/assets/styles/boardlist.module.css
@@ -1,7 +1,7 @@
 /* 상단 컨테이너 설정 ##################################### */
 .topContainer {
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
@@ -29,15 +29,25 @@
 
 /* 필터설정 ################################################ */
 .filter {
+    padding: 0 20px;
     border-bottom: 1px solid #cfcfcf;
 }
-
+.filter p{
+    width: 8%;
+    font-size: 2.3rem;
+    font-weight: bold;
+}
+.filter>div{
+    flex-grow: 1;
+}
+.filter label{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
 
 /* 검색설정 ################################################# */
 .search {
     padding: 0 20px;
-    display: flex;
-    align-items: center;
 }
 .search label {
     width: 8%;
@@ -115,6 +125,10 @@
     cursor: pointer;
 }
 
+input[type="checkbox"] {
+    transform: scale(1.5);
+    cursor: pointer;
+}
 
 
 /* 버튼 설정 ##################################################### */
@@ -123,6 +137,9 @@
     width: 100%;
     text-align: right;
     margin: 20px 0;
+}
+.cdBtn button{
+    margin-left: 10px;
 }
 
 /* 페이지 버튼 */
