--- a/src/assets/styles/header.module.css
+++ b/src/assets/styles/header.module.css
@@ -16,6 +16,10 @@
     color: #FFFFFF;
     cursor: pointer;
 }
+.logo img{
+    width: 170px;
+    height: auto;
+}
 .sign{
     font-size: 2.2rem;
     color: #FFFFFF;
